yiltc-go-backup/testsuite/negative/assert_non_string_msg.yilt
// assert with a non-string message should fail
fn main()
    assert true, 42
